# albert

./: .gitignore  README.md  increase_watchers.sh  index.html  package.json  pnpm-lock.yaml
src/: code_lang.ts  index.html  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_splitter.rs  audio_transcriber.rs  lib.rs
