[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"   
directories = "6.0"
tokio = { version = "1", features = ["full"] }
mp3_splitter = { path = "/home/jerome/scripts/rust/mp3_splitter" }
transcription_albert = { path = "/home/jerome/scripts/rust/transcription_albert" }
tauri-plugin-shell = "2"
